# diablo

./: .gitignore  .nvimrc  Makefile  README.md  meson.build  setup-docker-env.sh
.github/workflows/: ci.yaml
amalgamation/: diablo.c
bench/: count-eq-baseline.c  count_eq_bench.py
include/: diablo.h  utils.h
reference/: common.aarch64  common.dump  common.i386
src/: count-eq.c
test/: count-eq.lua  count-eq.py  count_eq.py
